dedicated api related code layer

--- a/template.yaml
+++ b/template.yaml
@@ -61,6 +61,10 @@ Globals:
       Variables:
         POWERTOOLS_LOG_LEVEL: INFO
         NEPTUNE_ENDPOINT: !GetAtt NeptuneStack.Outputs.Endpoint
+    Layers:
+      - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
+      - !Ref ApiLayer
+      - !Ref UtilsLayer
     VpcConfig:
       SubnetIds: !If [CreateVpc, !Split [',', !GetAtt VpcStack.Outputs.PrivateSubnetIds], !Ref PrivateSubnetIds]
       SecurityGroupIds:
@@ -255,6 +259,19 @@ Resources:
       CompatibleArchitectures:
         - arm64
 
+  ApiLayer:
+    Type: AWS::Serverless::LayerVersion
+    Metadata:
+      BuildMethod: python3.13
+      BuildArchitecture: arm64
+    Properties:
+      RetentionPolicy: Delete
+      ContentUri: layers/api/
+      CompatibleRuntimes:
+        - python3.13
+      CompatibleArchitectures:
+        - arm64
+
   LambdaSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Metadata:
@@ -288,9 +305,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/api_service/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Environment:
         Variables:
           POWERTOOLS_SERVICE_NAME: tams-service
@@ -370,9 +384,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/api_sources/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Environment:
         Variables:
           POWERTOOLS_SERVICE_NAME: tams-sources
@@ -522,9 +533,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/api_flows/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Environment:
         Variables:
           POWERTOOLS_SERVICE_NAME: tams-flows
@@ -794,9 +802,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/api_flow_segments/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Environment:
         Variables:
           POWERTOOLS_SERVICE_NAME: tams-segments
@@ -885,9 +890,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/api_flow_delete_requests/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Environment:
         Variables:
           POWERTOOLS_SERVICE_NAME: tams-deletion
@@ -934,9 +936,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/webhooks/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Timeout: 900
       Environment:
         Variables:
@@ -986,9 +985,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/sqs_delete_requests/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
-        - !Ref UtilsLayer
       Timeout: 900
       Environment:
         Variables:
@@ -1043,8 +1039,6 @@ Resources:
             reason: ReservedConcurrentExecutions not required
     Properties:
       CodeUri: functions/sqs_object_cleanup/
-      Layers:
-        - !Sub arn:${AWS::Partition}:lambda:${AWS::Region}:017000801446:layer:AWSLambdaPowertoolsPythonV3-python313-arm64:7
       Timeout: 900
       Environment:
         Variables:
