--- a/template.yaml
+++ b/template.yaml
@@ -35,6 +35,14 @@ Parameters:
     ConstraintDescription: ServerlessScalingConfiguration must be a list of two values, MinCapacity and MaxCapacity, separated by commas. Valid values between 1-128.
     AllowedPattern: (12[0-8]|1[01][0-9]|[1-9][0-9]|[1-9]),(12[0-8]|1[01][0-9]|[1-9][0-9]|[1-9])
 
+  DeployWaf:
+    Description: Configure whether a WAF should be deployed infront of the API.
+    Type: String
+    AllowedValues:
+      - "Yes"
+      - "No"
+    Default: "Yes"
+
 Mappings:
   Solution:
     Constants:
@@ -45,6 +53,8 @@ Conditions:
   SupportWebhooks: !Equals [!Ref EnableWebhooks, "Yes"]
 
   CreateVpc: !Equals [!Ref VpcId, ""]
+
+  CreateWaf: !Equals [!Ref DeployWaf, "Yes"]
 
 Transform: AWS::Serverless-2016-10-31
 
@@ -1203,6 +1213,15 @@ Resources:
         PrivateSubnetIds: !If [CreateVpc, !GetAtt VpcStack.Outputs.PrivateSubnetIds, !Join [',', !Ref PrivateSubnetIds]]
         LambdaSecurityGroupId: !Ref LambdaSecurityGroup
         ServerlessScalingConfiguration: !Ref NeptuneServerlessConfiguration
+
+  WafStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: templates/waf.yaml
+      Parameters:
+        ParentStackName: !Ref AWS::StackName
+        ApiGwArn: !Sub arn:${AWS::Partition}:apigateway:${AWS::Region}::/restapis/${Api}/stages/${Api.Stage}
+    Condition: CreateWaf
 
 Outputs:
   ApiEndpoint:
