--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
 develop-eggs/
 dist/
 downloads/
@@ -237,13 +236,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# Build folder
-
-*/build/*
-
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 .vscode/settings.json
 .aws-sam
 Flashpost-tests
-utils
 samconfig.toml
+api/build/tams
