un-comment check

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,10 +17,10 @@ repos:
         args:
           - --maxkb=1000
       - id: check-merge-conflict
-      #- id: no-commit-to-branch
-      #  args:
-      #    - --branch
-      #    - main
+      - id: no-commit-to-branch
+        args:
+          - --branch
+          - main
 
   # Secrets
   - repo: https://github.com/awslabs/git-secrets
